test/sema/typeck/function/params-wrong-type-2.out
error: Argument expects value of type `Bool` but got `Int32`.
--> params-wrong-type-2.dora:2:20
 | fn foo(_a: Int32, _b: Bool) {}
 | fn f() { foo(1i32, 2i32); }
                      ~~~~
 | 
1 error found.
