test/sema/typeck/function/params-wrong-type-2.dora
fn foo(_a: Int32, _b: Bool) {}
fn f() { foo(1i32, 2i32); }
